2025-02-14  Niels Möller  <nisse@lysator.liu.se>

	* slh-dsa.h: New public header file.
	* slh-dsa-shake-128s.c (slh_dsa_shake_128s_root)
	(slh_dsa_shake_128s_generate_keypair, slh_digest)
	(slh_dsa_shake_128s_sign, slh_dsa_shake_128s_verify): New file,
	new functions.
	* Makefile.in (hogweed_SOURCES): Add slh-dsa-shake-128s.
	(HEADERS): Add slh-dsa.h.
	* testsuite/slh-dsa-test.c: Add test of slh-dsa-shake-128s.

2025-02-12  Niels Möller  <nisse@lysator.liu.se>

	* slh-shake.c (_slh_shake_init, _slh_shake): New file, new
	functions, moved from slh-wots.c. Update callers.
	* slh-merkle.c (_merkle_root, _merkle_sign, _merkle_verify): New
	file, new functions.
	* slh-xmss.c (xmss_leaf, xmss_node, _xmss_gen, _xmss_sign)
	(_xmss_verify): New file, new functions.
	* slh-dsa-internal.h (struct slh_merkle_ctx_public)
	(struct slh_merkle_ctx_secret): New structs.
	(merkle_leaf_hash_func, merkle_node_hash_func): New typedefs.
	* slh-fors.c (_fors_gen, fors_leaf, fors_node, _fors_sign)
	(_fors_verify): New file, new functions.
	* Makefile.in (nettle_SOURCES): Add slh-fors.c, slh-merkle.c,
	slh-shake.c and slh-xmss.c.
	* testsuite/slh-dsa-test.c: Add merkle, xmss and fors tests.

2025-02-11  Niels Möller  <nisse@lysator.liu.se>

	* slh-wots.c (_wots_gen, _wots_sign, _wots_verify): New file, new functions.
	* slh-dsa-internal.h: New file.
	* Makefile.in (nettle_SOURCES): Add slh-wots.c.
	(DISTFILES): Add slh-dsa-internal.h.
	* testsuite/slh-dsa-test.c: New file.
	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Add slh-dsa-test.c.

2025-03-02  Niels Möller  <nisse@lysator.liu.se>

	* powerpc64/p8/gcm-aes-decrypt.asm: Avoid using lxvb16x
	instruction in powerpc64/p8 files. Reported by Sean McGovern.
	* powerpc64/p8/gcm-aes-encrypt.asm: Likewise.

2025-02-09  Niels Möller  <nisse@lysator.liu.se>

	* powerpc64/p8/gcm-aes-decrypt.asm: Use stxvd2x/lxvd2x rather than
	stxv/lxv for save and restore of vector registers, since the